@@ -17,7 +17,7 @@ eggs = lovely.testlayers [mysql, pgsql, cassandra]
 [nginx]
 # this part is used to generate an nginx installation for the nginx testlayer
 recipe = hexagonit.recipe.cmmi
-url = http://sysoev.ru/nginx/nginx-0.7.62.tar.gz
+url = http://nginx.org/download/nginx-1.0.15.tar.gz
 extra_options = --with-debug
 
 [scripts]
@@ -27,4 +27,4 @@ eggs = lovely.testlayers [mysql, pgsql, cassandra]
 
 [postgres]
 recipe = hexagonit.recipe.cmmi
-url=http://ftp.at.postgresql.org/pub/postgresql/source/v8.4.7/postgresql-8.4.7.tar.gz
+url=http://ftp.postgresql.org/pub/source/v8.4.16/postgresql-8.4.16.tar.gz
